--- a/filter-control-preclass.Rmd
+++ b/filter-control-preclass.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Untitled"
+title: "Pre-class 3"
 output: html_document
 ---
 
@@ -9,20 +9,47 @@ output: html_document
 ### Question 1:
 
 Using a loop, print the integers from 1 to 50. 
+```{r}
+for(i in 1:50){
+  print(i)
+}
+```
+
 
 ### Question 2:
 
 A.  Using a loop, add all the integers between 0 and 1000.
+```{r}
+x=0
+for(i in 0:1000){
+  x=x+i
+}
+```
+
 
 B. Now, add all the EVEN integers between 0 and 1000 (hint: use seq())
+```{r}
+y=0
+for(i in seq(0,1000,by=2)){
+  y=y+i
+}
+```
+
 
 C. Now, repeat A and B WITHOUT using a loop.
+```{r}
+#A
+sum(0:1000)
+#B
+sum(seq(0,1000,by=2))
+```
+
 
 ### Question 3:
 
 Here is a dataframe of survey data containing 5 questions :
 
-```{r, eval=FALSE}
+```{r}
 survey <- data.frame(
                      "participant" = c(1, 2, 3, 4, 5, 6),
                      "q1" = c(5, 3, 2, 7, 11, 0),
@@ -35,5 +62,28 @@ survey <- data.frame(
 The response to each question should be an integer between 1 and 5. Obviously, we have some bad values in the dataframe. The goal of this problem is to fix them.
 
 A. Using a loop, create a new dataframe called survey.clean where all the invalid values (those that are not integers between 1 and 5) are set to NA.
+```{r}
+survey.clean=survey
+for(i in 1:6){
+  for(j in 2:6){
+    if(survey[i,j]>5 || survey[i,j]<1){
+      survey.clean[i,j]=NA
+    }
+  }
+}
+```
+
 
 B. Now, again using a loop, add a new column to the dataframe called “invalid.answers” that indicates, for each participant, how many bad answers they gave.
+```{r}
+survey$invalid.answers=0
+for(i in 1:6){
+  for(j in 2:6){
+    if (survey[i,j]<1 || survey[i,j]>5){
+      survey$invalid.answers[i]=survey$invalid.answers[i]+1
+    }
+  }
+}
+
+```
+
